Reduce  padding-right in .form-control.is-invalid to prevent the possiblity of covering of the placeholder text

--- a/src/login/styles/_inputs.scss
+++ b/src/login/styles/_inputs.scss
@@ -110,6 +110,7 @@ input:focus {
   border: none;
   border-bottom: 2px solid $orange-highlight;
   background-image: none;
+  padding-right: 8px;
 }
 
 .form-control.is-invalid:focus {
